add back news items and start gallery macro

--- a/UmbracoCertification/Views/Master.cshtml
+++ b/UmbracoCertification/Views/Master.cshtml
@@ -73,7 +73,10 @@
 		<!-- End Nav -->
 		
 		<!-- Child template begins -->
-		@RenderBody()
+		<div class="container">
+		    	@RenderBody()
+		</div>
+	
 		<!-- Child template ends -->
 
 	</body>
