--- a/UmbracoCertification/Views/NewsItem.cshtml
+++ b/UmbracoCertification/Views/NewsItem.cshtml
@@ -5,3 +5,10 @@
 
 @* the fun starts here *@
 
+<div class="col-md-9">
+    <div class="page-header">
+        <h1>@Umbraco.Field("pageName")</h1>
+    </div>
+    <h3>@Umbraco.Field("pageName")</h3>
+    @Umbraco.Field("bodyText")
+</div>
